# kiv-fjp-sp

./: README.md
doc/: .gitignore  doc.tex
pres-01/: fjp-prezentace.tex  gramatika.txt
proj/: .gitignore  CMakeLists.txt  ast.cpp  ast.h  grammar.y  main.cpp  types.cpp
proj/pmachine/: pmachine.cpp
proj/samples/: basic.cmm  const_fail.cmm  factorial.cmm  function.cmm  if.cmm  inputs_ternary.cmm  test.cmm
token/: .gitignore  CMakeLists.txt  Makefile  ast.cpp  ast.h  grammar.y  main.c  main.cpp  test.l  test.y  token.l  types.c  types.h
token/pmachine/: pmachine.cpp
token/samples/: array.cmm  assign.cmm  basic.cmm  fail.cmm  function.cmm  if.cmm  inputs.cmm  loop.cmm  struct.cmm
